src/main/java/intentional/analyze/syntax/AnalyzeOperatorParser.java
// $ANTLR 3.4 AnalyzeOperator.g 2024-11-13 16:56:27

	package intentional.analyze.syntax;
	
	import java.util.ArrayList;
	import java.util.HashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class AnalyzeOperatorParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "A", "AGGRFUNC", "ANALYZE", "AND", "AS", "B", "BY", "C", "COMMA", "D", "DIGIT", "E", "EQUAL", "F", "FOR", "FROM", "G", "GROUP", "H", "I", "J", "K", "L", "LETTER", "LPARENTHESIS", "M", "N", "NUMBER", "O", "P", "Q", "R", "RPARENTHESIS", "S", "T", "TEXTVALUE", "U", "V", "W", "WORD", "WS", "X", "Y", "Z"
    };

    public static final int EOF=-1;
    public static final int A=4;
    public static final int AGGRFUNC=5;
    public static final int ANALYZE=6;
    public static final int AND=7;
    public static final int AS=8;
    public static final int B=9;
    public static final int BY=10;
    public static final int C=11;
    public static final int COMMA=12;
    public static final int D=13;
    public static final int DIGIT=14;
    public static final int E=15;
    public static final int EQUAL=16;
    public static final int F=17;
    public static final int FOR=18;
    public static final int FROM=19;
    public static final int G=20;
    public static final int GROUP=21;
    public static final int H=22;
    public static final int I=23;
    public static final int J=24;
    public static final int K=25;
    public static final int L=26;
    public static final int LETTER=27;
    public static final int LPARENTHESIS=28;
    public static final int M=29;
    public static final int N=30;
    public static final int NUMBER=31;
    public static final int O=32;
    public static final int P=33;
    public static final int Q=34;
    public static final int R=35;
    public static final int RPARENTHESIS=36;
    public static final int S=37;
    public static final int T=38;
    public static final int TEXTVALUE=39;
    public static final int U=40;
    public static final int V=41;
    public static final int W=42;
    public static final int WORD=43;
    public static final int WS=44;
    public static final int X=45;
    public static final int Y=46;
    public static final int Z=47;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public AnalyzeOperatorParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public AnalyzeOperatorParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return AnalyzeOperatorParser.tokenNames; }
    public String getGrammarFileName() { return "AnalyzeOperator.g"; }


    	String aggrFunc;
    	String measure;
    	String cubeName;
    	ArrayList<String> sigmaExpressions;
    	HashMap<String,String> sigmaExpressionsValues;
    	ArrayList<String> gammaExpressions;
    	String queryAlias;



    // $ANTLR start "start"
    // AnalyzeOperator.g:30:1: start : parse ;
    public final void start() throws RecognitionException {
        try {
            // AnalyzeOperator.g:30:6: ( parse )
            // AnalyzeOperator.g:30:7: parse
            {

            	sigmaExpressions = new ArrayList<String>();
            	sigmaExpressionsValues = new HashMap<String,String>();
            	gammaExpressions = new ArrayList<String>();


            pushFollow(FOLLOW_parse_in_start82);
            parse();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "start"



    // $ANTLR start "parse"
    // AnalyzeOperator.g:36:1: parse : ANALYZE aggrfunc LPARENTHESIS measure RPARENTHESIS FROM cubeName FOR sigmaExpressions GROUP BY gammaExpressions AS queryAlias ;
    public final void parse() throws RecognitionException {
        try {
            // AnalyzeOperator.g:36:6: ( ANALYZE aggrfunc LPARENTHESIS measure RPARENTHESIS FROM cubeName FOR sigmaExpressions GROUP BY gammaExpressions AS queryAlias )
            // AnalyzeOperator.g:36:8: ANALYZE aggrfunc LPARENTHESIS measure RPARENTHESIS FROM cubeName FOR sigmaExpressions GROUP BY gammaExpressions AS queryAlias
            {
            match(input,ANALYZE,FOLLOW_ANALYZE_in_parse89); 

            pushFollow(FOLLOW_aggrfunc_in_parse91);
            aggrfunc();

            state._fsp--;


            match(input,LPARENTHESIS,FOLLOW_LPARENTHESIS_in_parse93); 

            pushFollow(FOLLOW_measure_in_parse95);
            measure();

            state._fsp--;


            match(input,RPARENTHESIS,FOLLOW_RPARENTHESIS_in_parse97); 

            match(input,FROM,FOLLOW_FROM_in_parse99); 

            pushFollow(FOLLOW_cubeName_in_parse101);
            cubeName();

            state._fsp--;


            match(input,FOR,FOLLOW_FOR_in_parse103); 

            pushFollow(FOLLOW_sigmaExpressions_in_parse105);
            sigmaExpressions();

            state._fsp--;


            match(input,GROUP,FOLLOW_GROUP_in_parse107); 

            match(input,BY,FOLLOW_BY_in_parse109); 

            pushFollow(FOLLOW_gammaExpressions_in_parse111);
            gammaExpressions();

            state._fsp--;


            match(input,AS,FOLLOW_AS_in_parse113); 

            pushFollow(FOLLOW_queryAlias_in_parse115);
            queryAlias();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "parse"



    // $ANTLR start "aggrfunc"
    // AnalyzeOperator.g:38:1: aggrfunc : AGGRFUNC ;
    public final void aggrfunc() throws RecognitionException {
        Token AGGRFUNC1=null;

        try {
            // AnalyzeOperator.g:38:9: ( AGGRFUNC )
            // AnalyzeOperator.g:38:10: AGGRFUNC
            {
            AGGRFUNC1=(Token)match(input,AGGRFUNC,FOLLOW_AGGRFUNC_in_aggrfunc121); 

            aggrFunc=(AGGRFUNC1!=null?AGGRFUNC1.getText():null);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "aggrfunc"



    // $ANTLR start "measure"
    // AnalyzeOperator.g:40:1: measure : WORD ;
    public final void measure() throws RecognitionException {
        Token WORD2=null;

        try {
            // AnalyzeOperator.g:40:8: ( WORD )
            // AnalyzeOperator.g:40:10: WORD
            {
            WORD2=(Token)match(input,WORD,FOLLOW_WORD_in_measure129); 

            measure=(WORD2!=null?WORD2.getText():null);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "measure"



    // $ANTLR start "cubeName"
    // AnalyzeOperator.g:42:1: cubeName : WORD ;
    public final void cubeName() throws RecognitionException {
        Token WORD3=null;

        try {
            // AnalyzeOperator.g:42:9: ( WORD )
            // AnalyzeOperator.g:42:11: WORD
            {
            WORD3=(Token)match(input,WORD,FOLLOW_WORD_in_cubeName137); 

            cubeName=(WORD3!=null?WORD3.getText():null);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "cubeName"



    // $ANTLR start "sigmaExpressions"
    // AnalyzeOperator.g:44:1: sigmaExpressions : ( sigmaExpression )? ( AND sigmaExpression )* ;
    public final void sigmaExpressions() throws RecognitionException {
        try {
            // AnalyzeOperator.g:44:17: ( ( sigmaExpression )? ( AND sigmaExpression )* )
            // AnalyzeOperator.g:44:19: ( sigmaExpression )? ( AND sigmaExpression )*
            {
            // AnalyzeOperator.g:44:19: ( sigmaExpression )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==WORD) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // AnalyzeOperator.g:44:19: sigmaExpression
                    {
                    pushFollow(FOLLOW_sigmaExpression_in_sigmaExpressions145);
                    sigmaExpression();

                    state._fsp--;


                    }
                    break;

            }


            // AnalyzeOperator.g:44:35: ( AND sigmaExpression )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==AND) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // AnalyzeOperator.g:44:36: AND sigmaExpression
            	    {
            	    match(input,AND,FOLLOW_AND_in_sigmaExpressions148); 

            	    pushFollow(FOLLOW_sigmaExpression_in_sigmaExpressions150);
            	    sigmaExpression();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "sigmaExpressions"



    // $ANTLR start "sigmaExpression"
    // AnalyzeOperator.g:46:1: sigmaExpression : ( sigmaExpressionNumberValue | sigmaExpressionTextValue );
    public final void sigmaExpression() throws RecognitionException {
        try {
            // AnalyzeOperator.g:46:16: ( sigmaExpressionNumberValue | sigmaExpressionTextValue )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==WORD) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==EQUAL) ) {
                    int LA3_2 = input.LA(3);

                    if ( (LA3_2==NUMBER) ) {
                        alt3=1;
                    }
                    else if ( (LA3_2==TEXTVALUE) ) {
                        alt3=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 2, input);

                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;

                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // AnalyzeOperator.g:46:18: sigmaExpressionNumberValue
                    {
                    pushFollow(FOLLOW_sigmaExpressionNumberValue_in_sigmaExpression159);
                    sigmaExpressionNumberValue();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // AnalyzeOperator.g:46:45: sigmaExpressionTextValue
                    {
                    pushFollow(FOLLOW_sigmaExpressionTextValue_in_sigmaExpression161);
                    sigmaExpressionTextValue();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "sigmaExpression"



    // $ANTLR start "sigmaExpressionNumberValue"
    // AnalyzeOperator.g:48:1: sigmaExpressionNumberValue : WORD EQUAL NUMBER ;
    public final void sigmaExpressionNumberValue() throws RecognitionException {
        Token WORD4=null;
        Token NUMBER5=null;

        try {
            // AnalyzeOperator.g:48:27: ( WORD EQUAL NUMBER )
            // AnalyzeOperator.g:48:29: WORD EQUAL NUMBER
            {
            WORD4=(Token)match(input,WORD,FOLLOW_WORD_in_sigmaExpressionNumberValue169); 

            match(input,EQUAL,FOLLOW_EQUAL_in_sigmaExpressionNumberValue171); 

            NUMBER5=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_sigmaExpressionNumberValue173); 

            sigmaExpressions.add((WORD4!=null?WORD4.getText():null));sigmaExpressionsValues.put((WORD4!=null?WORD4.getText():null),(NUMBER5!=null?NUMBER5.getText():null));

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "sigmaExpressionNumberValue"



    // $ANTLR start "sigmaExpressionTextValue"
    // AnalyzeOperator.g:50:1: sigmaExpressionTextValue : WORD EQUAL TEXTVALUE ;
    public final void sigmaExpressionTextValue() throws RecognitionException {
        Token WORD6=null;
        Token TEXTVALUE7=null;

        try {
            // AnalyzeOperator.g:50:25: ( WORD EQUAL TEXTVALUE )
            // AnalyzeOperator.g:50:27: WORD EQUAL TEXTVALUE
            {
            WORD6=(Token)match(input,WORD,FOLLOW_WORD_in_sigmaExpressionTextValue182); 

            match(input,EQUAL,FOLLOW_EQUAL_in_sigmaExpressionTextValue184); 

            TEXTVALUE7=(Token)match(input,TEXTVALUE,FOLLOW_TEXTVALUE_in_sigmaExpressionTextValue186); 

            sigmaExpressions.add((WORD6!=null?WORD6.getText():null));sigmaExpressionsValues.put((WORD6!=null?WORD6.getText():null),(TEXTVALUE7!=null?TEXTVALUE7.getText():null));

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "sigmaExpressionTextValue"



    // $ANTLR start "gammaExpressions"
    // AnalyzeOperator.g:52:1: gammaExpressions : gammaExpression ( COMMA gammaExpression )* ;
    public final void gammaExpressions() throws RecognitionException {
        try {
            // AnalyzeOperator.g:52:17: ( gammaExpression ( COMMA gammaExpression )* )
            // AnalyzeOperator.g:52:19: gammaExpression ( COMMA gammaExpression )*
            {
            pushFollow(FOLLOW_gammaExpression_in_gammaExpressions196);
            gammaExpression();

            state._fsp--;


            // AnalyzeOperator.g:52:35: ( COMMA gammaExpression )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==COMMA) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // AnalyzeOperator.g:52:36: COMMA gammaExpression
            	    {
            	    match(input,COMMA,FOLLOW_COMMA_in_gammaExpressions199); 

            	    pushFollow(FOLLOW_gammaExpression_in_gammaExpressions201);
            	    gammaExpression();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "gammaExpressions"



    // $ANTLR start "gammaExpression"
    // AnalyzeOperator.g:54:1: gammaExpression : WORD ;
    public final void gammaExpression() throws RecognitionException {
        Token WORD8=null;

        try {
            // AnalyzeOperator.g:54:16: ( WORD )
            // AnalyzeOperator.g:54:18: WORD
            {
            WORD8=(Token)match(input,WORD,FOLLOW_WORD_in_gammaExpression210); 

            gammaExpressions.add((WORD8!=null?WORD8.getText():null));

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "gammaExpression"



    // $ANTLR start "queryAlias"
    // AnalyzeOperator.g:56:1: queryAlias : WORD ;
    public final void queryAlias() throws RecognitionException {
        Token WORD9=null;

        try {
            // AnalyzeOperator.g:56:11: ( WORD )
            // AnalyzeOperator.g:56:13: WORD
            {
            WORD9=(Token)match(input,WORD,FOLLOW_WORD_in_queryAlias218); 

            queryAlias=(WORD9!=null?WORD9.getText():null);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "queryAlias"

    // Delegated rules


 

    public static final BitSet FOLLOW_parse_in_start82 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_ANALYZE_in_parse89 = new BitSet(new long[]{0x0000000000000020L});
    public static final BitSet FOLLOW_aggrfunc_in_parse91 = new BitSet(new long[]{0x0000000010000000L});
    public static final BitSet FOLLOW_LPARENTHESIS_in_parse93 = new BitSet(new long[]{0x0000080000000000L});
    public static final BitSet FOLLOW_measure_in_parse95 = new BitSet(new long[]{0x0000001000000000L});
    public static final BitSet FOLLOW_RPARENTHESIS_in_parse97 = new BitSet(new long[]{0x0000000000080000L});
    public static final BitSet FOLLOW_FROM_in_parse99 = new BitSet(new long[]{0x0000080000000000L});
    public static final BitSet FOLLOW_cubeName_in_parse101 = new BitSet(new long[]{0x0000000000040000L});
    public static final BitSet FOLLOW_FOR_in_parse103 = new BitSet(new long[]{0x0000080000200080L});
    public static final BitSet FOLLOW_sigmaExpressions_in_parse105 = new BitSet(new long[]{0x0000000000200000L});
    public static final BitSet FOLLOW_GROUP_in_parse107 = new BitSet(new long[]{0x0000000000000400L});
    public static final BitSet FOLLOW_BY_in_parse109 = new BitSet(new long[]{0x0000080000000000L});
    public static final BitSet FOLLOW_gammaExpressions_in_parse111 = new BitSet(new long[]{0x0000000000000100L});
    public static final BitSet FOLLOW_AS_in_parse113 = new BitSet(new long[]{0x0000080000000000L});
    public static final BitSet FOLLOW_queryAlias_in_parse115 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_AGGRFUNC_in_aggrfunc121 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_WORD_in_measure129 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_WORD_in_cubeName137 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_sigmaExpression_in_sigmaExpressions145 = new BitSet(new long[]{0x0000000000000082L});
    public static final BitSet FOLLOW_AND_in_sigmaExpressions148 = new BitSet(new long[]{0x0000080000000000L});
    public static final BitSet FOLLOW_sigmaExpression_in_sigmaExpressions150 = new BitSet(new long[]{0x0000000000000082L});
    public static final BitSet FOLLOW_sigmaExpressionNumberValue_in_sigmaExpression159 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_sigmaExpressionTextValue_in_sigmaExpression161 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_WORD_in_sigmaExpressionNumberValue169 = new BitSet(new long[]{0x0000000000010000L});
    public static final BitSet FOLLOW_EQUAL_in_sigmaExpressionNumberValue171 = new BitSet(new long[]{0x0000000080000000L});
    public static final BitSet FOLLOW_NUMBER_in_sigmaExpressionNumberValue173 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_WORD_in_sigmaExpressionTextValue182 = new BitSet(new long[]{0x0000000000010000L});
    public static final BitSet FOLLOW_EQUAL_in_sigmaExpressionTextValue184 = new BitSet(new long[]{0x0000008000000000L});
    public static final BitSet FOLLOW_TEXTVALUE_in_sigmaExpressionTextValue186 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_gammaExpression_in_gammaExpressions196 = new BitSet(new long[]{0x0000000000001002L});
    public static final BitSet FOLLOW_COMMA_in_gammaExpressions199 = new BitSet(new long[]{0x0000080000000000L});
    public static final BitSet FOLLOW_gammaExpression_in_gammaExpressions201 = new BitSet(new long[]{0x0000000000001002L});
    public static final BitSet FOLLOW_WORD_in_gammaExpression210 = new BitSet(new long[]{0x0000000000000002L});
    public static final BitSet FOLLOW_WORD_in_queryAlias218 = new BitSet(new long[]{0x0000000000000002L});

}